--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install -U pip
           pip install poetry
           poetry install
 
